# intel-tdx-zk-prover

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile copy.prod  Dockerfile.alpine  Dockerfile.debian  Dockerfile.dev  Dockerfile.fake  Dockerfile.prod  README.md  curl_command.sh  docker-compose.yml  health.conf  init.sh  lambda-event.json  sample_payload.json
.github/workflows/: build-rust-lambda.yml  ci.yaml  prod-deploy.yml  publish.yml  reusable-cdk.yml
.sqlx/: query-186b3f8c73a5a5f04a3b49e87059978d3bf1b9f347bf6356d5505a68c65c5f3d.json  query-1c91d2f480272a7211ccb691860fefe74bec7ff6fa9dd664b7595eb275b77f56.json  query-1cef5bdb5c8b977e68ed3dc8a535b5ea0e1fcc26c9687afc9e13ad48b80cf823.json  query-26b85dcb3e3e1a66da217ac3b3c389eab6c75531541bac243df1950e7842b738.json  query-3ac1696c614c966e9cfb20f2398914db8f9d931e3f630983caf78cef360e6a7c.json  query-3c95c31e3b0c79396f0068391ba4f1383383e1efc9980d3dcef3f416fac0472f.json  query-3ffb0ef32fe4c2332082c5f6053e1008c8a4e33c13293c978d5ed0672bbe76a0.json  query-42ce68d4e6444df06d5ad60bea6558b4baaa019c1a7080f650bd6eb220d742a2.json  query-42edbf91828405509080fb3f190894ffc577712dcb949af3edb17710eedee532.json  query-5d9e092b55bb70e9e17e0d941314037d392c97319c00990ecd6205881e09da8e.json  query-7aada223cc29e658a0ca04b04284942f3bf4f69ce218d52f1a426a9797ae3704.json  query-80ecdcd304ad7042dff2a2676718c9c11d934c541c91ceab885bfacbcccb9eda.json  query-830ae4e2fe495b84cb6ad78797d18c8cddb9898a0b180dbbdb10bd0cf2424989.json  query-90a77ef475dd52c3979fd127700c82c3627670c5e999d41fac00ece20b888b46.json  query-9f2ee66889b1f390a08586bd2111d756e86ab7ab92dbee10a6be7ce2c56f836c.json  query-b07967f044e0af8bcac38c1203de69a8bbf790dcc3d014960b998bf82748a7be.json  query-b6a0308ed386efd1d1f7ef2b2c464d0f592426eb6420f9e6181566380d1255ce.json  query-bc8478f028a6dee6341b509dfdec5b55bfa95f277019f49b5a7d42938d957cac.json  query-c8c4d03c1fdbd8acb45d33f5c57f991f37a1ad6bcfd6716d78f7cdcf8d24f64b.json  query-cbb440150edc42ea607796896370dc42412cdaa0277ca3ba3be769e45b2b0d99.json  query-d09aa4f90b4fc223e1efc7ecf3d9bffc1836cb1e044fcd7c20ff75299a50c19e.json  query-d4449b98eb97ab00bf155f1999d9d130c822ca7ed1beb784a6abd406e3f58313.json  query-e134e4c9b9696e7da2657a92229ae31f8fe658f665f4e54d6d9e771d0e91c1fb.json  query-eb827714742c14999436e231de8638dc926abee0ae22df5a1f366f2576b5c1c1.json
api/: Cargo.toml
api/src/: main.rs
api/src/error/: api_error.rs  mod.rs
api/src/handler/: mod.rs  quote_handler.rs  request_handler.rs
api/src/routes/: quote.rs  request.rs  root.rs
cli/: Cargo.toml
cli/src/: aws.rs  main.rs  prove.rs  request.rs
data/: event.json
deploy/: .gitignore  .tool-versions  Makefile  app.py  package.json  pyproject.toml
deploy/app/: ecr_repository_stack.py  tdx_prover_stack.py
deploy/app/lambda-eventbridge/: lambda.py  requirements.txt
elf/: dcap-risc0  dcap-sp1-guest-program-elf
lambda/: Cargo.toml
lambda/src/: function.rs  main.rs
migrations/: 20250325163619_create_agents_table.sql  20250325163809_create_requests_table.sql  20250325164209_create_attestations_table.sql  20250325164210_create_quote_table.sql  20250325164211_copy_request_table.sql  20250325164212_copy_quote_table.sql
prover/: Cargo.toml
prover/src/: lib.rs
prover/src/chain/: attestation.rs  constants.rs  mod.rs  utils.rs
prover/src/chain/pccs/: enclave_id.rs  fmspc_tcb.rs  pcs.rs
prover/src/config/: database.rs  mod.rs  parameter.rs  pool.rs
prover/src/dto/: quote_dto.rs
prover/src/entity/: dcap.rs  quote.rs  zk.rs
prover/src/error/: db_error.rs  mod.rs  quote_error.rs  request_error.rs
prover/src/repository/: quote_repository.rs  request_repository.rs
prover/src/service/: mod.rs  quote_service.rs
prover/src/state/: mod.rs  quote_state.rs  request_state.rs
prover/src/zk/: mod.rs  sp1.rs
src/: main.rs
src/chain/: attestation.rs  mod.rs
src/chain/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs  parser.rs  pcs.rs
src/config/: parameter.rs
src/dto/: agent_dto.rs  attestation_dto.rs  mod.rs  quote_dto.rs  request_dto.rs
src/entity/: agent.rs  attestation.rs  dcap.rs  evm.rs  mod.rs  onchain_request.rs  quote.rs  request.rs  zk.rs
src/error/: agent_error.rs  api_error.rs  api_request_error.rs  attestation_error.rs  mod.rs  quote_error.rs  request_error.rs
src/handler/: agent_handler.rs  attestation_handler.rs  mod.rs  quote_handler.rs  request_handler.rs
src/lambda/: function.rs
src/repository/: agent_repository.rs  attestation_repository.rs  mod.rs  onchain_request_repository.rs  quote_repository.rs  request_repository.rs
src/risc0/: mod.rs
src/risc0/code/: mod.rs
src/routes/: agent.rs  attestation.rs  mod.rs  quote.rs  request.rs  root.rs
src/service/: agent_service.rs  attestation_service.rs  mod.rs  quote_service.rs  request_service.rs
src/sp1/: constants.rs  mod.rs  parser.rs  prove.rs  utils.rs
src/sp1/chain/: attestation.rs  mod.rs
src/sp1/chain/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs  pcs.rs
src/state/: agent_state.rs  attestation_state.rs  mod.rs  quote_state.rs  request_state.rs
src/zk/: mod.rs  risc0.rs  sp1.rs
