[[bin]]
name = "tdx-prover"
path = "src/main.rs"

[package]
name = "tdx-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = "0.8.3"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
bigdecimal-ethers-ext = "0.2.1"
chrono = { version = "0.4.40", features = ["serde"] }
dcap-qvl = "0.2.3"
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
dotenvy = "0.15.7"
ethereum-types = "0.15.1"
ethers_primitives = "0.2.2"
hyper = "1.6.0"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "bigdecimal",
    "uuid"
] }
sqlx-cli = "0.8.3"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
