[workspace]
resolver = "2"
members = ["prover", "api", "lambda", "cli"]

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
sqlx-cli = "0.8.3"
strum = "0.24.0"
strum_macros = "0.27.1"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
validator = { version = "0.20.0", features = ["derive"] }
