[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
uuid = "1.16.0"
prover = { path = "../prover" }
