[package]
name = "tdx-prover-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tdx-prover = { path = "../prover" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }
