[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["eventbridge"] }
hex = "0.4.3"
lambda_runtime = "0.13.0"
openssl = { version = "0.10.72", features = ["vendored"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prover = { path = "../prover" }
