[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.12.6"
alloy-chains = "0.1.69"
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.9.1"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.1" }
risc0-zkvm = "=1.2.5"
serde = { version = "1.0.219", features = ["derive"] }
sp1-sdk = "^4.1.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "bigdecimal",
    "uuid"
] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
x509-parser = "0.17.0"

[build-dependencies]
sp1-helper = "4.0.1"
sqlx-cli = "0.8.3"
