[package]
name = "tdx-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.6", features = ["full"] }
alloy-chains = "0.1.69"
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
dotenvy = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.1" }
risc0-zkvm = "=1.2.5"
serde = { workspace = true }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "bigdecimal",
    "uuid"
] }
sp1-sdk = "^4.1.0"
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
validator = { workspace = true }
x509-parser = "0.17.0"
deadpool = "0.12.2"

[build-dependencies]
sp1-helper = "4.0.1"
